fixed face recognition on mobile display

--- a/recognize_user/css/recognizeUserStyles.css
+++ b/recognize_user/css/recognizeUserStyles.css
@@ -31,4 +31,11 @@ canvas {
     video {
         max-width: 350px;
     }
+    canvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        pointer-events: auto;
+    }
 }
